[IMP] tournee history date end

--- a/tournee/views/tourne_views.xml
+++ b/tournee/views/tourne_views.xml
@@ -44,6 +44,7 @@
             <tree>
                 <field name="name"/>
                 <field name="user_ids" widget="many2many_tags"/>
+                <field name="date_end" string="Date de réalisation"/>
                 <field name="tourne_duration" widget="timesheet_uom"/>
                 <field name="temps_passage_avg" widget="timesheet_uom"/>
                 <field name="score"/>
