--- a/tournee/views/anomalie_views.xml
+++ b/tournee/views/anomalie_views.xml
@@ -120,7 +120,7 @@
         </field>
     </record>
 
-    <record id="tags_anomalie_tree_view" model="ir.ui.view">
+    <record id="tags_task_anomalie_tree_view" model="ir.ui.view">
         <field name="name">tags.anomalie.tree.view</field>
         <field name="model">tags.task.anomalie</field>
         <field name="arch" type="xml">
@@ -134,8 +134,6 @@
                 <field name="respo_zone_id"/>
                 <field name="task_id" invisible="1"/>
                 <field name="anomalie_id"/>
-                <field name="anomalie_commentaire_id" domain="[('anomalie_id', '=', anomalie_id)]"/>
-                <field name="criticite"/>
                 <field name="depuis_le"/>
                 <field name="state"/>
                 <field name="comment"/>
@@ -165,6 +163,7 @@
             </graph>
         </field>
     </record>
+
     <record id="task_tags_anomalie_form_view" model="ir.ui.view">
         <field name="name">tags.anomalie.form.view</field>
         <field name="model">tags.task.anomalie</field>
@@ -188,9 +187,6 @@
                         <field name="tag_id"/>
                         <field name="respo_zone_id"/>
                         <field name="anomalie_id"/>
-                        <field name="anomalie_commentaire_id" options="{'no_create':1, 'no_edit':1}"
-                               domain="[('anomalie_id', '=', anomalie_id)]"/>
-                        <field name="criticite"/>
                         <field name="depuis_le"/>
                         <field name="state"/>
                         <field name="comment"/>
@@ -218,26 +214,25 @@
                     <group>
                         <field name="name"/>
                     </group>
-                    <notebook>
-                        <page string="Commentaires">
-                            <field name="commentaire_ids">
-                                <tree editable="bottom">
-                                    <field name="name"/>
-                                    <field name="criticite"/>
-                                    <field name="anomalie_id" invisible="1"/>
-                                </tree>
-                            </field>
-                        </page>
-                    </notebook>
                 </sheet>
             </form>
+        </field>
+    </record>
+
+    <record id="tags_anomalie_tree_view" model="ir.ui.view">
+        <field name="name">tags.anomalie.tree.view</field>
+        <field name="model">tags.anomalie</field>
+        <field name="arch" type="xml">
+            <tree editable="bottom">
+                <field name="name"/>
+            </tree>
         </field>
     </record>
 
     <record id="action_tags_anomalie" model="ir.actions.act_window">
         <field name="name">Anomalies</field>
         <field name="res_model">tags.anomalie</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree</field>
     </record>
 
     <record id="action_tags_anomalie_tournee" model="ir.actions.act_window">
@@ -270,14 +265,8 @@
                 <field name="date_anomalie"/>
                 <field name="respo_zone_id"/>
                 <field name="anomalie_id"/>
-                <field name="anomalie_commentaire_id"/>
                 <field name="depuis_le"/>
-                <field name="red_color_criticite" invisible="1"/>
-                <field name="orange_color_criticite" invisible="1"/>
-                <field name="yellow_color_criticite" invisible="1"/>
                 <field name="already_reported"/>
-                <field name="criticite"
-                       options='{"bg_color": "red:red_color_criticite == True; orange:orange_color_criticite == True; yellow:yellow_color_criticite == True"}'/>
                 <field name="green_color_state" invisible="1"/>
                 <field name="blue_color_state" invisible="1"/>
                 <field name="state"
